<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RobotProjectApp</string>
    <string name="title_section0">Preferences</string>
    <string name="title_section1">Robot WASD</string>
    <string name="title_section2">Quad Drive</string>
    <string name="title_section3">Obst. Avoid.</string>
    <string name="title_section4">Ball Finder</string>
    <string name="title_section5">Beacon Ball</string>
    <string name="title_section6">Ball avoid finder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="dialog_title_calibrating">Calibration</string>
    <string name="dialog_calibrating">Calibrating the device please wait or press cancel to stop calibrating and discard the result</string>
    <string name="cancel">Cancel</string>
    <string name="robot_quad_drive_distance_to_drive_hint">distance to drive in cm at one edge</string>
    <string name="robot_quad_drive_start">Start!</string>
    <string name="robot_obstacle_avoidance_start">Start!</string>
    <string name="robot_obstacle_avoidance_reset">Reset!</string>
    <string name="robot_obstacle_avoidance_to_x_hint">x coord</string>
    <string name="robot_obstacle_avoidance_to_y_hint">y coord</string>
    <string name="robot_obstacle_avoidance_to_theta_hint">angle</string>
    <string name="robot_ball_finder_start">Start</string>
    <string name="robot_ball_finder_reset">Reset</string>
    <string name="robot_ball_finder_to_x_hint">x coord</string>
    <string name="robot_ball_finder_to_y_hint">y coord</string>
    <string name="robot_ball_finder_to_ball_x_hint">x ball</string>
    <string name="robot_ball_finder_to_ball_y_hint">y ball</string>
    <string name="robot_ball_finder_to_theta_hint">angle</string>
    <string name="robot_beacon_ball_start">Start</string>
    <string name="robot_beacon_ball_reset">Reset</string>
    <string name="robot_beacon_ball_to_x_hint">x coord</string>
    <string name="robot_beacon_ball_to_y_hint">y coord</string>
    <string name="robot_beacon_ball_to_ball_x_hint">x ball</string>
    <string name="robot_beacon_ball_to_ball_y_hint">y ball</string>
    <string name="robot_beacon_ball_to_theta_hint">angle</string>
    <string name="robot_beacon_ball_calibrate_homography">Hom. Calib.</string>
    <string name="robot_beacon_ball_calibrate_colors">Col. Calib.</string>
    <!-- Preferences -->
    <string name="preferences_robot">Robot Preferences</string>
    <string name="preferences_robot_common">Common Options</string>
    <string name="preferences_robot_common_summary">Settings like the unlocked mode</string>
    <string name="preferences_robot_common_cameraFragment">specifies which view will be the camera View</string>
    <string name="preferences_robot_common_cameraFragment_summary">camera View</string>
    <string name="preferences_robot_common_unlocked">Unlocked Mode</string>
    <string name="preferences_robot_common_unlocked_summary">unlocks some stuff on the modded version of the robot like 25x times faster transfer speed</string>
    <string name="preferences_robot_calibration">Calibration</string>
    <string name="preferences_robot_calibration_summary">Calibration of the velocity of the wheels and the distance sensor</string>
    <string name="preferences_robot_calibration_type">Calibration Type</string>
    <string name="preferences_robot_calibration_time">Calibration Time</string>
    <string name="preferences_robot_calibration_time_summary">Time per wheel calibration in ms</string>
    <string name="preferences_robot_calibration_left_wheel_slow">Left Wheel Slow</string>
    <string name="preferences_robot_calibration_right_wheel_slow">Right Wheel Slow</string>
    <string name="preferences_robot_calibration_left_wheel_medm">Left Wheel Medium</string>
    <string name="preferences_robot_calibration_right_wheel_medm">Right Wheel Medium</string>
    <string name="preferences_robot_calibration_left_wheel_fast">Left Wheel Fast</string>
    <string name="preferences_robot_calibration_right_wheel_fast">Right Wheel Fast</string>
    <string name="preferences_robot_calibration_slow_velocity">Slow Velocity</string>
    <string name="preferences_robot_calibration_medm_velocity">Medium Velocity</string>
    <string name="preferences_robot_calibration_fast_velocity">Fast Velocity</string>
    <string name="preferences_robot_calibration_wheel_velocity_summary">Speed in cm/s</string>
    <string name="preferences_robot_calibration_velocity_summary">Range between 1–127, recommended 5–80</string>

</resources>