<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/preferences_robot_common" >
        <CheckBoxPreference
            android:key="@string/prefRobotUnlockedMode"
            android:title="@string/preferences_robot_common_unlocked"
            android:summary="@string/preferences_robot_common_unlocked_summary"
            ></CheckBoxPreference>
        <org.uibk.iis.robotprojectapp.IntEditTextPreference
            android:dialogTitle="@string/preferences_robot_common_cameraFragment"
            android:key="@string/prefRobotCameraView"
            android:maxLength="2"
            android:numeric="integer"
            android:summary="@string/preferences_robot_common_cameraFragment_summary"
            android:title="@string/preferences_robot_common_cameraFragment" />
    </PreferenceCategory>

</PreferenceScreen>