<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/robot_obstacle_avoidance_to_x"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:hint="@string/robot_obstacle_avoidance_to_x_hint"
            android:imeOptions="actionDone"
            android:inputType="number|numberDecimal" />

        <EditText
            android:id="@+id/robot_obstacle_avoidance_to_y"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:hint="@string/robot_obstacle_avoidance_to_y_hint"
            android:imeOptions="actionDone"
            android:inputType="number|numberDecimal" />

        <EditText
            android:id="@+id/robot_obstacle_avoidance_to_theta"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:hint="@string/robot_obstacle_avoidance_to_theta_hint"
            android:imeOptions="actionDone"
            android:inputType="number|numberDecimal" />

        <Button
            android:id="@+id/robot_obstacle_avoidance_buttonStart"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/robot_obstacle_avoidance_start" />

        <Button
            android:id="@+id/robot_obstacle_avoidance_buttonReset"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/robot_obstacle_avoidance_reset" />
    </LinearLayout>

    <TextView
        android:id="@+id/robot_obstacle_avoidance_textLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:scrollbars="none"
        android:textSize="12sp" >

        <requestFocus />
    </TextView>

</LinearLayout>